# emscripten-playground

./: CMakeLists.txt  build.sh  index.html  package.json  readme.md  run.sh
cpp/: ArrayInStruct1.h  ArrayInStruct2.h  Enums.h  IncludeHeaders.h  Vector.h
javascript/binding/: binding.cpp  bindingArrayInStruct1.cpp  bindingArrayInStruct2.cpp  bindingEnums.cpp  bindingVector.cpp
